# funcnodes_sklearn

./: .env.example  .gitignore  pyproject.toml
funcnodes_sklearn/: __init__.py  _utils.py  calibration.py  cluster.py  covariance.py  cross_decomposition.py  datasets.py  decomposition.py  discriminant_analysis.py  fit.py  metrics.py  preprocessing.py
tests/: _setup_env.py  all_nodes_test_base.py  test_calibration.py  test_cluster.py  test_covariance.py  test_cross_decomposition.py  test_datasets.py  test_decomposition.py  test_discriminant_analysis.py  test_fit.py  test_metrics.py  test_preprocessing.py
