[tool.poetry]
name = "funcnodes-sklearn"
version = "0.1.14"
description = "Funcnodes interface to scikit-learn"
authors = ["Kourosh Rezaei <kouroshrezaei90@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.urls]
homepage  = "https://github.com/Linkdlab/funcnodes_sklearn"
source  = "https://github.com/Linkdlab/funcnodes_sklearn"
tracker  = "https://github.com/Linkdlab/funcnodes_sklearn/issues"
download = "https://pypi.org/project/funcnodes-sklearn/#files"


[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.2"
funcnodes = "*"
funcnodes-pandas = "*"
funcnodes-numpy = "*"



[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "^24.4.2"
python-decouple = "^3.8"
funcnodes-module = "^0.1.19"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."funcnodes.module"]
module = "funcnodes_sklearn"
shelf = "funcnodes_sklearn:NODE_SHELF"
